# fastapi-test

./: .gitignore  .gitlab-ci.yml  .pkgx.yaml  .pre-commit-config.yaml  .tags  Dockerfile  Dockerfile-uv  README.md  docker-compose.yaml  noxfile.py  pyproject.toml  requirements.txt
.gitea/workflows/: python.yaml  test.yaml
.github/workflows/: ci.yaml  leaks.yaml  main.yaml
src/: main.py
tests/: test_main.py
