[project]
requires-python = ">= 3.13"
name = "fastapi-test"
version = "0.1.0"
description = "fastapi test"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
# requires intallations via pip
#main = "template:main"

main = "main:app"
#main2 = "template:main"
#main3 = "template:tt"
#terminus = "terminus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

# doesnt work
#[tool.uv.cli]
#lint = "ruff check src"
#format = "ruff format src"
#test = "pytest tests/"

[dependency-groups]
ci = [
    "nox>=2025.2.9",
]
dev = [
    "pyragify>=0.1.0",
]
lint = [
    "ruff>=0.11.2",
]

[tool.black]
line-length = 79
include = '\.pyi?$'

#[tool.poetry]
#name = "inventory"
#version = "0.1.0"
#description = ""
#authors = ["xoneUpx <bobokuos@gmail.com>"]
#readme = "README.md"

#[tool.poetry.dependencies]
#python = "^3.11"
#pyyaml = "^6.0.1"
#requests = "^2.31.0"


#[tool.poetry.group.dev.dependencies]
#black = "^23.7.0"
#pytest = "^7.4.0"
#pyyaml = "^6.0.1"
#tox = "^4.9.0"
#pre-commit = "^3.3.3"
#pytest-testinfra = "^8.1.0"
#mypy = "^1.5.1"
#flake8 = "^6.1.0"
#types-requests = "^2.31.0.2"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
