[project]
requires-python = ">= 3.13"
#requires-python = ">=3.13.7"
name = "fastapi-test"
version = "0.1.0"
description = "fastapi test"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[project.scripts]
# requires intallations via pip
#main = "template:main"

main = "main:app"
#main2 = "template:main"
#main3 = "template:tt"
#terminus = "terminus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

# doesnt work
#[tool.uv.cli]
#lint = "ruff check src"
#format = "ruff format src"
#test = "pytest tests/"

[dependency-groups]
ci = [
    "nox>=2025.2.9",
]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pyragify>=0.1.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-mypy>=1.0.1",
    "pytest-testinfra>=10.2.2",
    "ruff>=0.13.1",
]
lint = [
    "ruff>=0.11.2",
]

[tool.pyright]
include = ['\.py?$']
exclude =  ['.venv']
typeCheckingMode = 'strict'


[tool.mypy]
#include = ['.*\.py.?$']
exclude =  ['\.venv']
warn_return_any = false

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79
include = '\.py\.?$'
